--- a/AleRoe.LiteDB.Extensions.DependencyInjection/AleRoe.LiteDB.Extensions.DependencyInjection.csproj
+++ b/AleRoe.LiteDB.Extensions.DependencyInjection/AleRoe.LiteDB.Extensions.DependencyInjection.csproj
@@ -2,6 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Version>0.0.9</Version>
+    <Authors>Alexander Röthinger</Authors>
+    <Company>AleRoe</Company>
+    <Description>Provides extension methods for registering and customizing a LiteDB.LiteDabase singleton instance using Microsoft.Extensions.DependencyInjection.</Description>
+    <Copyright>Alexander Röthinger, 2021</Copyright>
+    <PackageProjectUrl>https://github.com/AleRoe/LiteDB.Extensions</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <PackageOutputPath>C:\Users\Alexander\Source\LocalPackages</PackageOutputPath>
+    <RepositoryUrl>https://github.com/AleRoe/LiteDB.Extensions</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
